--- a/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
+++ b/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
@@ -642,7 +642,7 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="DNM_IDE" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="DNM_Text_Editor" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <userDefaultsController representsSharedInstance="YES" id="80D-Oo-dJU"/>
             </objects>
@@ -672,7 +672,7 @@
         <!--View Controller-->
         <scene sceneID="yNq-eF-YZM">
             <objects>
-                <viewController id="t8X-Ze-OFV" customClass="ViewController" customModule="DNM_IDE" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="t8X-Ze-OFV" customClass="ViewController" customModule="DNM_Text_Editor" customModuleProvider="target" sceneMemberID="viewController">
                     <scrollView key="view" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="4XO-Gg-D4t">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
