Add Save As..., saving PFFiles now

--- a/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
+++ b/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
                                         </menuItem>
                                         <menuItem title="Save As…" keyEquivalent="S" id="Bw7-FT-i3A">
                                             <connections>
-                                                <action selector="saveDocumentAs:" target="Ady-hI-5gd" id="mDf-zr-I0C"/>
+                                                <action selector="saveAsMenuItemSelected:" target="Voe-Tx-rLC" id="GQO-Yg-WcX"/>
                                             </connections>
                                         </menuItem>
                                         <menuItem title="Revert to Saved" id="KaW-ft-85H">
@@ -641,7 +641,11 @@
                         <outlet property="delegate" destination="Voe-Tx-rLC" id="PrD-fu-P6m"/>
                     </connections>
                 </application>
-                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="DNM_Text_Editor" customModuleProvider="target"/>
+                <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="DNM_Text_Editor" customModuleProvider="target">
+                    <connections>
+                        <outlet property="saveAsMenuItemSelected" destination="Bw7-FT-i3A" id="UBB-c4-l5V"/>
+                    </connections>
+                </customObject>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="75" y="0.0"/>
