--- a/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
+++ b/DNM Text Editor/DNM Text Editor/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9531"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9060"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -737,24 +737,6 @@
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <secureTextField hidden="YES" focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="eDx-aJ-Lau">
-                                <rect key="frame" x="177" y="-3" width="96" height="22"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="92" id="7LZ-qB-nce"/>
-                                    <constraint firstAttribute="height" constant="22" id="tvc-v3-0VX"/>
-                                </constraints>
-                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" focusRingType="none" placeholderString="password" usesSingleLineMode="YES" id="kww-GF-Lqg">
-                                    <font key="font" size="13" name="AvenirNext-Medium"/>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                    <allowedInputSourceLocales>
-                                        <string>NSAllRomanInputSourcesLocaleIdentifier</string>
-                                    </allowedInputSourceLocales>
-                                </secureTextFieldCell>
-                                <connections>
-                                    <action selector="didPressEnterInPasswordField:" target="XfG-lQ-9wD" id="jiO-Wv-nWC"/>
-                                </connections>
-                            </secureTextField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="elZ-Q1-VPE">
                                 <rect key="frame" x="286" y="-5" width="71" height="32"/>
                                 <constraints>
@@ -765,9 +747,26 @@
                                     <font key="font" size="14" name="AvenirNext-Regular"/>
                                 </buttonCell>
                                 <connections>
-                                    <action selector="didPressSignUpButton:" target="XfG-lQ-9wD" id="ngQ-hx-DVr"/>
+                                    <action selector="didPressSignUpButton:" target="XfG-lQ-9wD" id="gAy-gr-Rx2"/>
                                 </connections>
                             </button>
+                            <secureTextField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="swl-7K-PkO">
+                                <rect key="frame" x="172" y="-3" width="100" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="96" id="DdX-Es-aFM"/>
+                                </constraints>
+                                <secureTextFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" focusRingType="none" placeholderString="password" usesSingleLineMode="YES" id="hsA-3b-yuu">
+                                    <font key="font" size="13" name="AvenirNext-Regular"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                    <allowedInputSourceLocales>
+                                        <string>NSAllRomanInputSourcesLocaleIdentifier</string>
+                                    </allowedInputSourceLocales>
+                                </secureTextFieldCell>
+                                <connections>
+                                    <action selector="didPressEnterInPasswordField:" target="XfG-lQ-9wD" id="Les-xG-KBG"/>
+                                </connections>
+                            </secureTextField>
                         </subviews>
                         <constraints>
                             <constraint firstItem="qcP-ac-kb8" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="7" id="1OI-f5-83l"/>
@@ -779,24 +778,24 @@
                             <constraint firstItem="37O-eA-Po2" firstAttribute="centerY" secondItem="qcP-ac-kb8" secondAttribute="centerY" constant="-0.5" id="FEo-qE-sc1"/>
                             <constraint firstItem="qcP-ac-kb8" firstAttribute="baseline" secondItem="elZ-Q1-VPE" secondAttribute="baseline" id="N9T-qg-8Mg"/>
                             <constraint firstAttribute="trailing" secondItem="gEp-uP-wMS" secondAttribute="trailing" constant="6" id="OLQ-s5-zBw"/>
-                            <constraint firstItem="eDx-aJ-Lau" firstAttribute="leading" secondItem="37O-eA-Po2" secondAttribute="trailing" constant="13" id="Pnk-QC-Ksg"/>
-                            <constraint firstItem="elZ-Q1-VPE" firstAttribute="leading" secondItem="eDx-aJ-Lau" secondAttribute="trailing" constant="15" id="RlN-uj-7g5"/>
                             <constraint firstAttribute="bottom" secondItem="37O-eA-Po2" secondAttribute="bottom" id="aha-tC-RRZ"/>
-                            <constraint firstAttribute="bottom" secondItem="eDx-aJ-Lau" secondAttribute="bottom" constant="-3" id="bjg-xb-YlS"/>
+                            <constraint firstAttribute="bottom" secondItem="swl-7K-PkO" secondAttribute="bottom" constant="-3" id="bek-tG-siH"/>
                             <constraint firstAttribute="bottom" secondItem="qcP-ac-kb8" secondAttribute="bottom" constant="-5" id="djl-Sv-HBS"/>
+                            <constraint firstItem="elZ-Q1-VPE" firstAttribute="leading" secondItem="swl-7K-PkO" secondAttribute="trailing" constant="16" id="oUH-Qt-bIE"/>
                             <constraint firstItem="37O-eA-Po2" firstAttribute="leading" secondItem="qcP-ac-kb8" secondAttribute="trailing" constant="1" id="tA1-V4-5JC"/>
+                            <constraint firstItem="swl-7K-PkO" firstAttribute="leading" secondItem="37O-eA-Po2" secondAttribute="trailing" constant="8" symbolic="YES" id="ucs-Ms-g9K"/>
+                            <constraint firstItem="swl-7K-PkO" firstAttribute="top" secondItem="Fy3-4S-aE9" secondAttribute="bottom" constant="1" id="yd8-ul-8AA"/>
                             <constraint firstItem="Fy3-4S-aE9" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="zar-ep-78s"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="didPressEnterInPasswordField" destination="eDx-aJ-Lau" id="Tze-L4-bT5"/>
                         <outlet property="loginStatusLabel" destination="gEp-uP-wMS" id="U3S-u8-tSM"/>
-                        <outlet property="passwordField" destination="eDx-aJ-Lau" id="pIN-yM-sgk"/>
+                        <outlet property="passwordField" destination="swl-7K-PkO" id="OYv-59-jjY"/>
                         <outlet property="signInOrOutButton" destination="qcP-ac-kb8" id="qbr-ZU-66s"/>
-                        <outlet property="signInOrOutorUpButton" destination="qcP-ac-kb8" id="kDn-oG-Kyg"/>
+                        <outlet property="signInOrOutorUpButton" destination="qcP-ac-kb8" id="s0m-LD-Kiw"/>
                         <outlet property="signUpButton" destination="elZ-Q1-VPE" id="7UF-Dr-SuQ"/>
                         <outlet property="textView" destination="Ldp-FJ-N29" id="Y89-qq-ZYZ"/>
-                        <outlet property="usernameField" destination="37O-eA-Po2" id="ex3-gI-QNf"/>
+                        <outlet property="usernameField" destination="37O-eA-Po2" id="KQZ-iY-Ucu"/>
                     </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
